# NITriTe-2.0

./: .gitattributes  .gitignore  COMMANDES.txt  Instructions d'utilisation - NiTriTe v26.32.0.html  Instructions d'utilisation - NiTriTe v26.32.0.txt  PRD_FONCTIONNALITES_MANQUANTES.md  README.html  README.md  build.bat  dev.bat  index.html  package-lock.json  package.json  plan_fonctionnalites_nitrite.md.resolved  test_uninstall_vlc.ps1  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  sdi.cfg  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/data/: drivers_recommended.json  portable_apps.json  programs.json  tools.json
src-tauri/src/: error.rs  lib.rs  lib_ai_scripts_cmds.rs  lib_core_cmds.rs  lib_diagnostic_extra_a.rs  lib_diagnostic_extra_b.rs  lib_extended_cmds.rs  lib_recovery_cmds.rs  logging.rs  main.rs  state.rs
src-tauri/src/ai/: llamacpp.rs  mod.rs  ollama.rs  tool_calling.rs
src-tauri/src/backup/: collector.rs
src-tauri/src/installer/: chocolatey.rs  favorites.rs  manager.rs  mod.rs  portables.rs  script_generator.rs  uninstaller.rs  windows_update.rs  winget.rs
src-tauri/src/maintenance/: browser_cleanup.rs  cleanup.rs  commands.rs  debloat.rs  mod.rs  terminal.rs
src-tauri/src/scripts/: executor.rs  validator.rs
src-tauri/src/system/: accounts.rs  advanced_recovery.rs  benchmark.rs  bluetooth.rs  boot_manager.rs  bsod_analyzer.rs  certificates.rs  cleaner.rs  clone.rs  connections.rs  data_recovery.rs  dependencies.rs  dll_scanner.rs  driver_updater.rs  drivers.rs  eventlog.rs  extended_info.rs  extra.rs  hosts_editor.rs  (+27 more)
src-tauri/windows/: app.manifest
(+484 files in other folders)
