[package]
name = "nitrite"
version = "26.34.0"
description = "Nitrite v26.31 - Maintenance Informatique Professionnelle"
authors = ["NiTriTe"]
edition = "2021"

[lib]
name = "nitrite_lib"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "nitrite"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"

# Systeme
sysinfo = "0.32"
wmi = "0.14"
winreg = "0.52"

# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Erreurs
thiserror = "2"
anyhow = "1"

# Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilitaires
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
open = "5"
walkdir = "2"
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_SystemInformation",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
